--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,8 @@
+/* Import custom font */
+@import url('https://fonts.googleapis.com/css?family=Staatliches');
+@import url('https://fonts.googleapis.com/css?family=Teko');
+@import url('https://fonts.googleapis.com/css?family=Lato');
+
 body {
 
     color: #248b4b;
@@ -6,4 +11,10 @@ body {
     background-image: url("../images/baseball.jpg");
     background-size: 100% 100%;
     text-align: center;
+}
+
+.header {
+    text-align: center;
+    font-family: 'Teko';
+    color: rgb(197, 164, 18);
 }
