--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,6 +7,13 @@ body {
 
     color: #248b4b;
 }
+
+/* Format Navbar */
+.project-title {
+    font-size: 20px;
+    font-family: 'Lato';
+}
+
 .jumbotron {
     background-image: url("../images/baseball.jpg");
     background-size: 100% 100%;
@@ -18,3 +25,50 @@ body {
     font-family: 'Teko';
     color: rgb(197, 164, 18);
 }
+
+/* Menu Dropdown Button */
+/* Code for dropdown menu found from https://www.w3schools.com/howto/howto_css_dropdown.asp */
+.dropbtn {
+    background-color: #04AA6D;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 100px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd;} 
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+} 
