Change paths for integration in app.py

--- a/templates/pitches.html
+++ b/templates/pitches.html
@@ -33,8 +33,8 @@
                 <div class='dropdown'>
                     <button class='dropbtn'>Navigate</button>
                     <div class='dropdown-content'>
-                        <a href='/templates/index.html'>Home</a>
-                        <a href='/templates/pitches.html'>Predict-a-Pitch!</a>
+                        <a href='/'>Home</a>
+                        <a href='/predict'>Predict-a-Pitch!</a>
                         <!-- <a href='/zones'>Predict the Zone</a> -->
                     </div>
                 </div> 
