Comment out unnecessary lines

--- a/templates/index.html
+++ b/templates/index.html
@@ -86,28 +86,10 @@
       </div>
     </div>
   </div>
-              
-              
-              
-            
-        
-      
-      <!-- <div class="col-md-9">
-        <table class="table table-striped">
-          <thead>
-            <tr>
-              <img src="static/images/strikezones.jpg" alt="Your Pitch Results">
-              <p>Here the ball should show up on the image based on the users selections and an outcome should pop up</p>
-            </tr>
-          </thead>
-          <tbody></tbody>
-        </table>
-      </div>
-    </div>
-  </div> -->
+
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
-  <script src="../static/Python/app.py"></script>
+  <!-- <script src="../static/Python/app.py"></script> -->
 
 </body>
 </html>
