--- a/templates/pitches.html
+++ b/templates/pitches.html
@@ -51,7 +51,7 @@
         <h2>Make a pitch and find out!</h2>
     </div>
 
-    <div id='SelectionForm'>
+    <form id='SelectionForm'>
         <div class="row">
             <div class="col-md-3">
                 
@@ -179,7 +179,7 @@
                         <option value='6'>6</option>
                         <option value='7'>7</option>
                         <option value='8'>8</option>
-                    </select><br><br><br>
+                    </select><br><br>
                     
                     <!-- Pitch Type -->
                     
@@ -226,11 +226,11 @@
                 </div>
             </div>
         </div>
-    </div>
+    </form>
 
     <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
-    <script src="../static/Python/app.py"></script>
+    <!-- <script src="../static/Python/app.py"></script> -->
 
     <script>
         function refresh() {
