Make quotations same style; Add action and method to SelectionForm

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
           <button class='dropbtn'>Navigate</button>
           <div class='dropdown-content'>
             <a href='/'>Home</a>
-            <a href='/predict'>Predict-a-Pitch!</a>
+            <a href='/pitch'>Predict-a-Pitch!</a>
             <!-- <a href='/zones'>Predict the Zone</a> -->
           </div>
         </div> 
