--- a/templates/pitches.html
+++ b/templates/pitches.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset='UTF-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>Pitch In!</title>
     <link
-        rel="stylesheet"
-        href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-        crossorigin="anonymous"
+        rel='stylesheet'
+        href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css'
+        integrity='sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm'
+        crossorigin='anonymous'
     />
-    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel='stylesheet' href='../static/css/style.css'>
 
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src='https://code.jquery.com/jquery-3.5.1.min.js'
+        integrity='sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=' crossorigin='anonymous'></script>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
 
 </head>
 
 
-<body class = "bg-dark">
-    <div class="wrapper">
-        <nav class="navbar bg-primary">
+<body class = 'bg-dark'>
+    <div class='wrapper'>
+        <nav class='navbar bg-primary'>
             <div class='project-title'>Team Country Music Hall of Fame Final Project</div>   
             <a class='toggle-button' href='#'>
                 <span class='bar'></span>
@@ -34,7 +34,7 @@
                     <button class='dropbtn'>Navigate</button>
                     <div class='dropdown-content'>
                         <a href='/'>Home</a>
-                        <a href='/predict'>Predict-a-Pitch!</a>
+                        <a href='/pitch'>Predict-a-Pitch!</a>
                         <!-- <a href='/zones'>Predict the Zone</a> -->
                     </div>
                 </div> 
@@ -43,23 +43,23 @@
     </div>
 
     <div class='jumbotron jumbo-pitch'>
-        <h1 class="display-4">Predict-a-Pitch!</h1>   
+        <h1 class='display-4'>Predict-a-Pitch!</h1>   
     </div>
 
-    <div class="header">
+    <div class='header'>
         <h1>Do <i>you</i> have what it takes to be the best pitcher in the MLB?</h1><br>
         <h2>Make a pitch and find out!</h2>
     </div>
 
-    <form id='SelectionForm'>
-        <div class="row">
-            <div class="col-md-3">
+    <form id='SelectionForm' action='/result' method='post'>
+        <div class='row'>
+            <div class='col-md-3'>
                 
-                <ul class = "bg-dark">
+                <ul class = 'bg-dark'>
                     
                     
                     <!-- Release Speed -->
-                    <label for="ReleaseSpeed">Release Speed (Default: 85 mph)</label><br>
+                    <label for='ReleaseSpeed'>Release Speed (Default: 85 mph)</label><br>
     
                     <select id='ReleaseSpeed'>
                         <option value="85"> Select a Speed </option>
@@ -74,7 +74,7 @@
                     </select><br><br>
                     
                     <!-- Zone -->
-                    <label for="Zone">Zone (Default: 5)</label><br>
+                    <label for='Zone'>Zone (Default: 5)</label><br>
     
                     <select id='Zone'>
                         <option value='5'>Select a Zone</option>
@@ -95,7 +95,7 @@
                     </select><br><br>
                     
                     <!-- Balls -->
-                    <label for="Balls">Balls (Default: 0)</label><br>
+                    <label for='Balls'>Balls (Default: 0)</label><br>
     
                     <select id='Balls'>
                         <option value='0'>Select number of previous balls</option>
@@ -113,7 +113,7 @@
 
                     
                     <!-- Strikes -->
-                    <label for="Strikes">Strikes (Default: 0)</label><br>
+                    <label for='Strikes'>Strikes (Default: 0)</label><br>
     
                     <select id='Strikes'>
                         <option value='0'>Select number of previous strikes</option>
@@ -123,7 +123,7 @@
                     </select><br><br>
                     
                     <!-- inning -->
-                    <label for="Inning">Inning (Default: 1)</label><br>
+                    <label for='Inning'>Inning (Default: 1)</label><br>
     
                     <select id='Inning'>
                         <option value='1'>Select the inning</option>
@@ -139,7 +139,7 @@
                     </select><br><br>
                     
                     <!-- Release Spin -->
-                    <label for="ReleaseSpin">Release Spin Rate (Default: 3000)</label><br>
+                    <label for='ReleaseSpin'>Release Spin Rate (Default: 3000)</label><br>
     
                     <select id='ReleaseSpin'>
                         <option value='3000'>Select the spin rate</option>
@@ -155,7 +155,7 @@
                 <ul class='bg-dark'>
 
                     <!-- Release Extension -->
-                    <label for="ReleaseExtension">Release Extension (Default: 6.5)</label><br>
+                    <label for='ReleaseExtension'>Release Extension (Default: 6.5)</label><br>
     
                     <select id='ReleaseExtension'>
                         <option value='6.5'>Select the length of extension before release</option>
@@ -167,7 +167,7 @@
                     </select><br><br>
                     
                     <!-- Pitch Number -->
-                    <label for="PitchNumber">Pitch Number (Default: 1)</label><br>
+                    <label for='PitchNumber'>Pitch Number (Default: 1)</label><br>
     
                     <select id='PitchNumber'>
                         <option value='1'>Select how many pitches have been thrown</option>
@@ -183,10 +183,10 @@
                     
                     <!-- Pitch Type -->
                     
-                    <label for="PitchType">Pitch Type (Default: Fastball) </label><br>
+                    <label for='PitchType'>Pitch Type (Default: Fastball) </label><br>
     
                     <select id='PitchType'>
-                        <option value="FA"> Select a Pitch Type </option>
+                        <option value='FA'> Select a Pitch Type </option>
                         <option value='CH'>Change-Up</option>    
                         <option value='CU'>Curveball</option>    
                         <option value='FC'>Cutter</option> 
@@ -206,11 +206,11 @@
                     <!-- Prediction and Clear Buttons -->
                     <div class='row'>
                         <div class='col-sm-5'>
-                            <input id="predict" type="submit" value="PREDICT PITCH">
+                            <input id='predict' type='submit' value='PREDICT PITCH'>
                         </div>
                         <div class='col-sm-5'>
                             
-                            <br><input id="reset" type="reset" value="reset selections"
+                            <br><input id='reset' type='reset' value='reset selections'
                                     onclick="document.getElementById('prediction').innerText=''">
                         </div>
                     </div>
@@ -227,12 +227,13 @@
     </form>
 
     <!-- Scripts -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js'></script>
     <!-- <script src="../static/Python/app.py"></script> -->
 
+    <!-- Thanks Mike! -->
     <script>
         function refresh() {
-            const prediction_button = document.getElementById("predict");
+            const prediction_button = document.getElementById('predict');
             prediction_button.onclick = function (event) {
                 event.preventDefault();
                 $.ajax({
@@ -241,7 +242,7 @@
                     data: $('#SelectionForm').serialize(),
                     success: function (data) {
                         console.log(data)
-                        $("#prediction").html(data)
+                        $('#prediction').html(data)
                     }
                 });
             }
