Continue work on model predictions

--- a/templates/pitches.html
+++ b/templates/pitches.html
@@ -220,7 +220,7 @@
             <!-- Strike/Not-Strike Outcome -->
             <div class='col-md-3'>
                 <div class='container'>
-                    <h2 id='prediction'>{{prediction}}</h2>
+                    <h2 id='prediction'>{{prediction}}{{vals}}</h2>
                 </div>
             </div>
         </div>
