--- a/templates/pitches.html
+++ b/templates/pitches.html
@@ -238,8 +238,11 @@
             
             <!-- Strike/Not-Strike Outcome -->
             <div class='col-md-3'>
-                <div class='container'>
-                    <h2 id='prediction'>{{prediction}}</h2>
+                <div id='polaroid' class='polaroid'>
+                    <img id='animated-gif' src='static/images/vintage_pitch.gif'>
+                    <div class='container'>
+                        <h2 id='prediction'>{{prediction}}</h2>
+                    </div>
                 </div>
             </div>
         </div>
