Change name to Pitch-O-Rama

--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
   </div>
 
   <div class="jumbotron jumbo-main">
-    <h1 class="display-4">Pitch In!</h1>   
+    <h1 class="display-4">Pitch-O-Rama!</h1>   
     <!-- <div class="row">
         <div class="col-sm-6">
             <br><br><br><br>
