Guess what I figured out how to do (Hint: check the header)

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
 
 <body class = "bg-dark">
   <div class="wrapper">
-    <nav class="navbar bg-primary" >
+    <nav class='navbar' style='background-image: linear-gradient(black, rgba(6, 108, 167, 0.3))'>
       <div class='project-title'>Team Country Music Hall of Fame Final Project</div>   
       <!-- <a class='toggle-button' href='#'>
         <span class='bar'></span>
@@ -40,7 +40,7 @@
         </div> 
       </div>
     </nav>        
-  </div>
+  </div><br>
 
   <div class="jumbotron jumbo-main">
     <h1 class="display-4">Pitch-O-Rama!</h1>   
@@ -74,7 +74,7 @@
           <!-- List -->
           <div class='col-md-6'>
             <ul class='bg-dark'>
-              <h4>Welcome to the Pitch-O-Rama </h4>
+              <h3>Welcome to the Pitch-O-Rama </h3>
               <li class='list-group-item bg-dark'>
                 The Wind Up <br> This is a predictive module we have put together using Html, Python, Javascript, SQL, Jupyter Notebooks, Flask, AWS, and CSS. 
                 We took data from the MLB statcast database for 2020 and 2019, cleaned and sorted the data, then parsed it down to a workable data set used to explore the questions we had about the MLB. 
