--- a/templates/pitches.html
+++ b/templates/pitches.html
@@ -23,7 +23,7 @@
 
 <body class = 'bg-dark'>
     <div class='wrapper'>
-        <nav class='navbar bg-primary'>
+        <nav class='navbar' style='background-image: linear-gradient(black, rgba(6, 108, 167, 0.3))'>
             <div class='project-title'>Team Country Music Hall of Fame Final Project</div>   
             <a class='toggle-button' href='#'>
                 <span class='bar'></span>
@@ -40,7 +40,7 @@
                 </div> 
             </div>
         </nav>     
-    </div>
+    </div><br>
 
     <div class='jumbotron jumbo-pitch'>
         <h1 class='display-4'>Predict-a-Pitch!</h1>   
