Change pitcher stance menu to pitch handedness

--- a/templates/pitches.html
+++ b/templates/pitches.html
@@ -209,15 +209,15 @@
 
                     <select id='batter_stance' name='batter_stance'>
                         <option value='1'>Select the Batter's Stance</option>
-                        <option value='1'>Right-Hand</option>
-                        <option value='0'>Left-Hand</option>
+                        <option value='1'>Right-Side</option>
+                        <option value='0'>Left-Side</option>
                     </select><br><br>
 
                     <!-- Pitcher Handedness -->
-                    <label for='PitcherHand'>Pitcher Stance (Default: Right-Hand)</label>
+                    <label for='PitcherHand'>Pitcher Handedness (Default: Right-Hand)</label>
 
                     <select id='pitcher_hand' name='pitcher_hand'>
-                        <option value='1'>Select the Pitcher's Stance</option>
+                        <option value='1'>Select the Pitcher's Handedness</option>
                         <option value='1'>Right-Hand</option>
                         <option value='0'>Left-Hand</option>
                     </select><br><br>
