Make changes to front page wording

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,7 +7,8 @@ body {
     font-family: 'Barlow Condensed';
     font-size: 15px;
     /* color: #248b4b; */
-    color:rgb(44, 164, 185)
+    color:rgb(44, 164, 185);
+    /* color:rgb(236, 135, 67); */
 }
 
 
