Change front page headings

--- a/templates/index.html
+++ b/templates/index.html
@@ -58,11 +58,11 @@
 
 		<!-- List -->
         <div class='col-md-6'>
-            <h3>Welcome to the Pitch-O-Rama!</h3>
+            <!-- <h3>Welcome to the Pitch-O-Rama!</h3> -->
 				<ul class='bg-dark'>
 					<!-- <li class='list-group-item bg-dark'> -->
 						<h4>The Wind Up</h4>
-						<h5><i>How did we get here?</i></h5>
+						<!-- <h5><i>How did we get here?</i></h5> -->
 						<li class='list-group-item bg-dark'>
 							Datasets cleaned using Pandas in Jupyter Notebook
 						</li>
@@ -75,6 +75,7 @@
 						<li class='list-group-item bg-dark'>
 							Dashboard created using HTML/CSS, Flask, and minor in-line Javascript for functionality
 						</li>
+						<br>
 						<!-- This is a predictive module we have put together using Htm, Python, Javascript, SQL, Jupyter Notebooks, Flask, AWS, and CSS. 
 						We took data from the MLB statcast database for 2020 and 2019, cleaned and sorted the data, then parsed it down to a workable data set used to explore the questions we had about the MLB. 
 						We plugged our dataset into a variety of machine learning models to see what is was we could accurately predict, and what sort of module predicted it the best. 
@@ -85,7 +86,7 @@
 					<!-- </li> -->
 					<!-- <li class='list-group-item bg-dark'> -->
 						<h4>The Pitch</h4>
-						<h5><i>How is our model?</i></h5>
+						<!-- <h5><i>How is our model?</i></h5> -->
 						<li class='list-group-item bg-dark'>
 							Gradient Boosted Classifier model based off MLB Statcast data from 2019-2020
 						</li>
