Change front page point

--- a/templates/index.html
+++ b/templates/index.html
@@ -91,7 +91,7 @@
 							Gradient Boosted Classifier model based off MLB Statcast data from 2019-2020
 						</li>
 						<li class='list-group-item bg-dark'>
-							Focused on top 9 pitchers in MLB 
+							Only focused on top 9 pitchers in MLB due to computational barriers
 						</li>
 						<li class='list-group-item bg-dark'>
 							~71% accuracy in determining whether or not a pitch will be a 'strike'
