--- a/templates/index.html
+++ b/templates/index.html
@@ -101,6 +101,17 @@
 					Using a combination of technologies, coding languages, and a lot of team effort, we created this webpage to let you explore our data and see if you've got what it takes to beat the best pitchers in the MLB! 
 					The best nine pitchers in the MLB have combined and you get to call the shots. Can you strike out the side? -->
 					<!-- </li> -->
+						<h4>Next up to Bat</h4>
+						<!-- <h5><i>How is our model?</i></h5> -->
+						<li class='list-group-item bg-dark'>
+							How does our model's predictions change with subsets of MLB players? (Per-team, all-stars, etc.)
+						</li>
+						<li class='list-group-item bg-dark'>
+							Can we determine what features drastically affect Delta win-percentage (probability that a team wins)?
+						</li>
+						<li class='list-group-item bg-dark'>
+							Could an unsupervised model group the best pitchers to determine what makes them the best
+						</li>
 				</ul>
 		</div>
 	</div>
